--- a/Final Project.Rmd
+++ b/Final Project.Rmd
@@ -145,7 +145,6 @@ Our first step in cleaning the data is to identify null values. This chart displ
 ```{r check NA, echo = F, include = T}
 
 # review how many fields are NA
-par(mar=c(5,6,4,2)+0.1)
 barplot(colSums(is.na(googlePlay)),
   col = "lightblue",
   main = "Playstore NA Values",
@@ -154,9 +153,8 @@ barplot(colSums(is.na(googlePlay)),
   las = 2,
   cex.names = 0.7)
 
-title(xlab="App Category", line=4, cex.lab=1.2, family="Calibri Light")
+title(xlab="App Category", line=4, cex.lab=1.2)
 ```
-
 
 ```{r clean NA, echo = F, include = F}
 
@@ -193,7 +191,6 @@ distinct <- nrow(googlePlay %>%
 
 nrow(googlePlay) - distinct
 ```
-
 
 ### 2.2.3 Clean up Variables for Analysis
 
@@ -240,8 +237,6 @@ googlePlay$InstallsLog <- gsub("5","1", googlePlay$InstallsLog)
 googlePlay$InstallsLog <- factor(googlePlay$InstallsLog, order = TRUE, 
        levels = c("0", "0+", "1+", "10+", "100+", "1,000+", "10,000+", "100,000+", "1,000,000+", "10,000,000+", "100,000,000+", "1,000,000,000+"))
 ```
-
-
 
 Since the price variable is a nominal factor in the original dataset, we must clean this up as well. We will now convert the price to a numeric by stripping the dollar sign and changing the variable type. Then for further analysis, we will create a new column called Price Categories and bucket the prices into Cheap, Expensive, and Very Expensive (0 to 10, 10+ to 100, 100+ and greater respectively). This will be further expanded upon in section five.
 
@@ -290,7 +285,6 @@ Current.Ver | Current_Ver |
 
 
 ### 3.2 SMART Question
-
 #### How do users rate apps in each app store?
 
 Rating will most likely be a response variable of interest later in our analysis so we begin our comparison of the two app stores by looking at the distributions of ratings for each.  
@@ -915,7 +909,9 @@ The ratings score was not normally distributed at all. That, plus it’s high co
 ```{r Rating Histogram2, include = T}
 
 reviewsHist <- ggplot(googlePlay, aes(x = Reviews)) + 
- geom_histogram(aes(y=..density..), colour="black", fill="#b19cd9")
+ geom_histogram(aes(y=..density..), colour="black", fill="#b19cd9") +
+ stat_bin(bins = 30) +
+ ylab('Density')
 
 suppressWarnings(reviewsHist)
 ```
